--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -104,8 +104,9 @@ input, select, textarea
   display: flex
   flex-wrap: wrap
   padding: 0 15px
-  width: 1200px
+  max-width: 1200px
   z-index: 2
+  width: 100%
 
 .box-title
   display: flex
@@ -196,7 +197,7 @@ h2
   position: absolute
   left: 20px
   top: 30%
-  transform: rotate(-180deg)
+  transform: rotate(-180deg) translate(0,-50%)
   writing-mode: vertical-rl
   text-align: right
   width: auto
@@ -240,6 +241,13 @@ h2
 
 .slick-slide
   outline: none
+  img
+    height: 100%
+    object-fit: cover
+    object-position: top
+
+.slick-vertical .slick-slide
+  border: none
 
 //keyframes
 @-webkit-keyframes anim-francisco
@@ -280,6 +288,9 @@ h2
 //section main
 .section-main
   background: $button
+  .slick-slide
+    img
+      width: 100%
 
 .main-flex, .portfolio-flex
   display: flex
@@ -296,7 +307,7 @@ h2
 
 .portfolio-left
   width: 50%
-  height: 70vh
+  height: 50vw
   display: flex
   position: relative
   align-items: center
@@ -304,6 +315,7 @@ h2
 
 .portfolio-right-slider
   width: 100%
+  height: 100%
   padding: 10% 4%
   color: #fff
 
@@ -349,12 +361,17 @@ h2
   position: relative
   height: 100%
   display: flex
-  align-items: center
+  align-items: flex-start
   justify-content: center
+  a
+    height: 100vw
+  img
+    width: 100%
+    object-position: top
 
 .portfolio-right
   width: 50%
-  height: 70vh
+  height: 50vw
   display: flex
   position: relative
   align-items: center
@@ -416,7 +433,7 @@ h2
 
 
 .main-block-flex
-  padding: 0 60px
+  padding: 0 40px
   z-index: 2
   position: relative
   height: 100%
@@ -448,10 +465,10 @@ h2
   margin: 0 5px
 
 .main-block-line
-  width: 120px
+  width: 110px
   height: 2px
   background: rgba(255, 255, 255, 0.7)
-  margin: 0 35px
+  margin: 0 30px
   border-radius: 1px
 
 .portfolio-arrows
@@ -549,7 +566,7 @@ h2
   transition: all .5s ease-in-out
   overflow: hidden
   display: flex
-  align-items: center
+  align-items: flex-start
   justify-content: center
   height: 100%
   &:before
@@ -650,14 +667,14 @@ h2
     transition: .5s ease
     bottom: 0
     left: -100%
-    background: rgba($red, 0.7)
+    background: rgba($violet, 0.7)
     height: 2px
     width: 0
     content: ''
     position: absolute
 
 .menu-item-link:hover
-  color: $red
+  color: $accent
   &:before
     width: 100%
     left: 0
@@ -670,7 +687,7 @@ h2
   position: relative
   &:hover
     .menu-line
-      background: $red
+      background: $accent
 
 
 .menu-line
@@ -703,6 +720,11 @@ h2
       transform: rotate(315deg)
     .menu-line_bottom
       transform: rotate(-315deg)
+
+.menu-overlay
+  display: none
+
+
 
 
 header
@@ -744,12 +766,13 @@ header
   display: flex
   justify-content: center
   margin: 50px auto 0
+  width: 100%
 
 
 .tabs__content
   display: none
   width: 500px
-  padding: 0 40px 20px
+  padding: 0 0 20px 40px
   box-sizing: border-box
   p
     text-align: center
@@ -765,7 +788,7 @@ header
       transform: translate(-50%,0)
       width: 100px
       height: 5px
-      background: $red
+      background: $violet
 
 .list-services
   margin: 20px 0
@@ -810,14 +833,14 @@ header
       top: -100%
       height: 100%
       width: 5px
-      background: $red
+      background: $violet
       transition: .3s ease
     .icon
       width: 50px
       height: 30px
       margin: 0 auto 10px
       svg
-        fill: $red
+        fill: $violet
     &:hover
       background: $hover
       color: #fff
@@ -826,7 +849,7 @@ header
       text-transform: uppercase
       font-size: 14px
   li.active
-    background: rgba($red, .5)
+    background: rgba($violet, .5)
     color: #fff
     border-color: transparent
     &:before
@@ -856,12 +879,17 @@ svg
   background: #303c4a
 
 .price-slider
-  margin: 40px 0
+  margin: 40px 0 0
   display: flex
   align-items: flex-start
   flex-wrap: wrap
   justify-content: center
   width: 100%
+  padding: 0 0 0 30px
+  box-sizing: border-box
+
+
+.price-slider__arrow
   .slick-arrow
     position: absolute
     width: 20px
@@ -872,27 +900,15 @@ svg
     align-items: center
     justify-content: center
     color: $accent
-    border-bottom: 1px solid $accent
     z-index: 2
     cursor: pointer
     transition: .3s ease
-    &:hover
-      color: $bg3
-      border-color: $bg3
-    &:before
-      content: '\f054'
-      position: relative
-      display: inline-block
-      font-family: 'Font Awesome 5 Pro'
-      font-size: 24px
+    svg
+      fill: $accent
   .main-arrow-next
-    right: 0
+    right: 11px
   .main-arrow-prev
-    left: 0
-    &:before
-      content: '\f053'
-
-
+    left: 40px
 
 .price-box__wrapper
   display: flex
@@ -930,8 +946,8 @@ svg
   background: $bg3
   width: 350px
   border:
-    top: 2px solid $red
-    bottom: 2px solid $red
+    top: 2px solid $violet
+    bottom: 2px solid $violet
   h3
     font-size: 26px
     text-transform: uppercase
@@ -975,7 +991,7 @@ svg
     font-size: 16px
     text-align: center
     padding: 14px 10px 10px
-    border-bottom: 1px solid rgba($red, .4)
+    border-bottom: 1px solid rgba($violet, .4)
 
 
 .about
@@ -1000,9 +1016,10 @@ svg
   flex-wrap: wrap
   justify-content: center
   margin: 0 auto 30px
-  max-width: 350px
-  &:last-child
-    margin: 0
+  max-width: 30%
+  width: 100%
+  //&:last-child
+  //  margin: 0
   .photo
     width: 200px
     height: 230px
@@ -1027,13 +1044,13 @@ svg
       background: $bg
       width: 100%
       height: 100%
-      transform: rotate(7deg)
-      left: 0
-      top: 0
+      left: 7px
+      top: 7px
       opacity: .8
     &:after
       opacity: .5
-      transform: rotate(14deg)
+      top: 12px
+      left: 12px
   .text
     width: 100%
     padding: 0 0 0 30px
@@ -1045,20 +1062,26 @@ svg
       width: 100%
       font-size: 20px
       color: $accent
-      border-bottom: 1px solid $hover
+      border:
+        bottom: 1px solid $accent
       font-family: 'bebas-bold', sans-serif
     .position
       text-transform: none
-      margin: 10px auto
+      padding: 10px 0
       text-align: center
+      background: rgba($button, .5)
+      color: $bg
+
+      //margin: 5px 0
     .credo
       display: flex
       align-items: center
       font-family: 'Montserrat', sans-serif
       color: $border
-
+      margin: 10px 0
       h6
-        font-weight: bold
+        //font-weight: bold
+        color: $hover
         text-decoration: underline
         margin: 0 10px 0 0
     blockquote
@@ -1068,7 +1091,7 @@ svg
       padding: 0 0 0 15px
       margin: 15px 0
       border:
-        left: 2px solid $red
+        left: 2px solid $violet
       p
         margin: 0 0 5px
         &:last-child
@@ -1089,6 +1112,7 @@ footer
 
 
 .copyright
+  text-align: center
   width: 100%
   font-size: 12px
   color: #ccc
@@ -1098,6 +1122,7 @@ footer
 
 
 
+@import "modal"
 @import "callback"
 @import "animated"
 @import "media"
