--- a/app/sass/_media.sass
+++ b/app/sass/_media.sass
@@ -449,10 +449,23 @@
   .menu-btn .menu-line_top
     top: 4px
 
+  .modal__div
+    width: 95%
+    .modal__wrapper
+      padding: 30px 20px
+      h2
+        font-size: 24px
+        margin: 15px auto 20px
+
+  .styled-input
+    font-size: 14px
 
 @media only screen and (max-width : 380px)
   footer .box-contacts li a
     font-size: 10px
     padding: 0 4px
+
+  .copyright
+    text-align: center
 
 
