--- a/app/sass/_callback.sass
+++ b/app/sass/_callback.sass
@@ -1,7 +1,4 @@
 #callback-section
-  //position: fixed
-  //top: 0
-  //left: 0
   width: 100%
   height: 100%
   display: flex
@@ -48,8 +45,9 @@
 
 .form__cover
   position: absolute
-  left: 0
-  top: 0
+  left: 50%
+  top: 50%
+  transform: translate(-50%,-50%)
   height: 100%
   width: 100%
   z-index: -4
@@ -63,25 +61,30 @@
   &:after
     content: ''
     position: absolute
-    left: 32.9%
-    top: 1.5%
+    left: 0
+    right: 0
+    top: 0
     background: $button
     z-index: -4
     border-radius: 50%
     transition: all 1.5s ease 0.3s
-    transform: scale(0) translate(0,-50%)
+    transform: scale(0)
+    margin: auto
   &:before
     content: ''
     position: absolute
-    left: 32.9%
-    top: 1.5%
+    left: 0
+    right: 0
+    top: 0
+    bottom: 0
     height: 400px
     width: 400px
     background: white
     z-index: -5
     border-radius: 50%
     transition: all 0.5s ease
-    transform: scale(0) translate(0,-50%)
+    transform: scale(0)
+    margin: auto
 
 body
   &.on-start .form__cover:before
