--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -1158,12 +1158,19 @@ footer
   top: 0
   width: 100%
   height: 100%
-  background: $button
   display: flex
   align-items: center
   justify-content: center
   opacity: 1
   transition: opacity 1s linear
+
+.preloader-bg
+  position: absolute
+  left: 0
+  top: 0
+  width: 100%
+  height: 100%
+  background: $button
 
 
 .line-preloader
@@ -1172,12 +1179,13 @@ footer
   background: $accent
   position: absolute
 
-  &:first-child
-    top: 50px
-    left: 0
-  &:last-child
-    bottom: 50px
-    right: 0
+.line-preloader__top
+  top: 50px
+  left: 0
+
+.line-preloader__bottom
+  bottom: 50px
+  right: 0
 
 .preloader-logo
   color: #fff
