--- a/app/sass/_media.sass
+++ b/app/sass/_media.sass
@@ -468,4 +468,17 @@
   .copyright
     text-align: center
 
+  .preloader-logo__text
+    font-size: 40px
+
+  .preloader-tag
+    width: 25px
+    height: 25px
+
+  .line-preloader__top
+    top: 30px
+
+  .line-preloader__bottom
+    bottom: 30px
+
 
